--- a/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-dia-atendimento/configurar-dia-atendimento.component.html
@@ -174,13 +174,13 @@
                             </div>
                           </ng-template>
                         </ngx-datatable-column>
-                        <!--<ngx-datatable-column [sortable]="false" name="Ações" [canAutoResize]="true">
+                        <ngx-datatable-column [sortable]="false" name="Ações" [canAutoResize]="true">
                           <ng-template ngx-datatable-cell-template let-row="row">                           
                             <a class="home-icon" (click)="excluir(row)" title="Excluir">
                               <i class="fas fa-solid fa-ban p-2"></i>
                             </a>
                           </ng-template>
-                        </ngx-datatable-column>-->
+                        </ngx-datatable-column>
                         <ngx-datatable-footer>
                           <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
                             let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
