--- a/src/app/pages/cadastro/cadastro-clinica/cadastro-clinica.component.html
+++ b/src/app/pages/cadastro/cadastro-clinica/cadastro-clinica.component.html
@@ -113,7 +113,7 @@
                       <div class="col-md-3">
                         <label for="cep">Cep*</label>
                         <input class="form-control" name="cep" id="cep" type="text" formControlName="cep"
-                          mask="00000-000" [dropSpecialCharacters]="true" />
+                          mask="00000-000" [dropSpecialCharacters]="true" (blur)="buscaCep(formCadastroClinica.value)"/>
                       </div>
                       <div class="col-md-4">
                         <label for="rua">Rua*</label>
