--- a/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
@@ -116,7 +116,7 @@
                   <div class="form-group col-md-3">
                     <div class="form-group">
                       <input type="text" class="form-control ml-lg-n3" id="qrPresencial"
-                        formControlName="qrPresencial" />
+                        formControlName="qrPresencial" disabled/>
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
@@ -159,7 +159,7 @@
                   </div>
                   <div class="form-group col-md-3">
                     <div class="form-group">
-                      <input type="text" class="form-control ml-lg-n3" id="qrVideo" formControlName="qrVideo" />
+                      <input type="text" class="form-control ml-lg-n3" id="qrVideo" formControlName="qrVideo" disabled/>
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
@@ -205,7 +205,7 @@
                   <div class="form-group col-md-3">
                     <div class="form-group">
                       <input type="text" class="form-control ml-lg-n3" id="qrEmergencial"
-                        formControlName="qrEmergencial" />
+                        formControlName="qrEmergencial" disabled/>
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
@@ -248,7 +248,7 @@
                   </div>
                   <div class="form-group col-md-3">
                     <div class="form-group">
-                      <input type="text" class="form-control ml-lg-n3" id="qrCasa" formControlName="qrCasa" />
+                      <input type="text" class="form-control ml-lg-n3" id="qrCasa" formControlName="qrCasa" disabled/>
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
