--- a/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
+++ b/src/app/pages/gestao-paciente/novo-paciente/novo-paciente.component.html
@@ -138,7 +138,7 @@
                     <div class="form-group col-md-3">
                       <label for="CEP">CEP*</label>
                       <input class="form-control" name="cep" id="cep" type="text" formControlName="cep"
-                        mask="00000-000" />
+                        mask="00000-000" (blur)="buscaCep(formNovoPaciente.value)"/>
                     </div>
                     <div class="form-group col-md-1">
                       <label for="numero">N°*</label>
